<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff1f7"
    tools:context=".HostActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="33dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/select_institute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/institute" />

    <Spinner
        android:id="@+id/institute"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:background="#FFFFFF"
        android:entries="@array/instituteSpinnerItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/department"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:background="#FFFFFF"
        android:entries="@array/departmentSpinnerItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/select_department"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="25dp"
        android:background="#687089"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>